--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body{
     width: 100%;
     height: 100%;
     margin: 0px;
+    transition: background-color 0.5s ease, color 0.5s ease;
 }
 /*Estilo para el encabezado*/
 .top_content{
@@ -36,6 +37,7 @@ body{
     color: #111729;
     font-weight: 600 ;
 }
+/*Estilo para el cambio al dark_mode*/
 .top_content .dark_mode{
     margin-top: 15px;
     margin-right: 3rem;
@@ -47,10 +49,12 @@ body{
     border: solid 1px #223344;
     background-color: #223344;
     border-radius: 40px;
+    cursor: pointer;
 }
 .top_content .dark_mode img{
     height: 20px;
     width: 20px;
+    transition: opacity 0.5s ease;
 }
 .top_content .dark_mode .moom{
     margin-left: 10px;
@@ -59,6 +63,51 @@ body{
     background-color: #F2F9FE;
     border-radius: 100%;
     margin-left: 10px;
+}
+body.light-mode .moon {
+    opacity: 0.5;
+}
+
+body.light-mode .sun {
+    opacity: 1;
+}
+
+body.dark-mode .moon {
+    opacity: 1;
+}
+
+body.dark-mode .sun {
+    opacity: 0.5;
+}
+body.dark-mode {
+    background-color: #111729;
+}
+body.dark-mode .top_content .opcion p {
+    color: #909193;
+}
+body.dark-mode .top_content .opcion .bold {
+    color: #F2F9FE;
+}
+
+body.dark-mode .content_left .content_left_text .text_header {
+    color: #F2F9FE;
+}
+
+body.dark-mode .content_left .content_left_text .text_main {
+    color: #F2F9FE;
+}
+/*Estilo para el icono para cuando cambie de color*/
+.top_content .icon img {
+    transition: opacity 0.5s ease;
+}
+/* Estilo para el modo claro (predeterminado) */
+body.light-mode .top_content .icon img {
+    content: url('/img/alarado-icon-homepage.svg');
+}
+
+/* Estilo para el modo oscuro */
+body.dark-mode .top_content .icon img {
+    content: url('/img/alarado-icon-homepage-dark.svg');
 }
 /*Eestilo para el contenido principal*/
 .content_main{
@@ -77,7 +126,7 @@ body{
 }
 .content_main .content_left .content_left_text .text_header{
     text-transform: uppercase;
-    font-weight: 600;
+    font-weight: 700;
     font-size: 16px;
     color: #111729;
     margin: 0px;
@@ -113,6 +162,7 @@ body{
     display: flex;
     color: #909193;
     font-size:14px;
+    margin-top: 25px;
 }
 .content_main .content_left .check .check_left {
     display: flex;
